[package]
name = "anngou"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tar = "0.4.40"
aes = "0.8.3"
aes-gcm-siv = "0.11.1"
sha2 = "0.10.8"
eyre = "0.6.11"
rand = "0.8.5"
clap = { version = "4.4.14", features = ["derive"]}